# aether

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  collapse_mgxs.py  compare_mgxs.py  nonlinear_richardson.cc  nonlinear_richardson.h  plot_convergence.py  plot_mgxs.py  plot_mgxs_all.py  plot_rate.py
examples/: coarse_test.h  compare_test.cc  compare_test.h  example_test.h  mgxs_test.h  mms_test.h
examples/c5g7/: CMakeLists.txt  c5g7.cc  c5g7.cpp  plot_quadrature.m
examples/c5g7-uo2/: CMakeLists.txt  c5g7.h5  c5g7_test.cc  compare_test.cc  harness_test.cc  mms_test.cc  mpl_rc.py  plot_compare.py  plot_compare_cathalau.py  plot_mms.py  test_compare.cc  test_harness.cc
examples/cathalau-uo2/: CMakeLists.txt  cathalau_test.cc  checkerboard_test.cc  coarse_test.cc  compare_test.cc  jcp.mplstyle  mgxs_test.cc  mms_test.cc  plot_coarse.py  plot_coarse_eigen.py  plot_coarses.py  plot_compare.py  plot_compare_groupwise.py  plot_compare_k.py  plot_compare_mgxs.py  plot_compare_minimax.py  plot_compare_subspace.py  plot_compare_subspace_k.py  plot_fission_source.py  plot_minimax_cutoff.py  plot_minimax_ratio.py  plot_mms.py  plot_modes.py  plot_self_shielding.py  plot_spatial_views.py  plot_spectra_adj.py  plot_spectrum.py  plot_test_functions.py  self_shielding_test.cc  test.cc  thesis.mplstyle
examples/cathalau-uo2/mgxs/: mgxs-mox43-CASMO-70.h5  mgxs-mox43-SHEM-361.h5  mgxs-mox43-XMAS-172.h5  mgxs-uo2-CASMO-70.h5  mgxs-uo2-SHEM-361.h5  mgxs-uo2-XMAS-172.h5
examples/square/: CMakeLists.txt  square.cpp
examples/takeda/lwr/: CMakeLists.txt  mesh.h  mgxs.cc  mgxs.h  plot_3D.py  plot_conv.py  test.cc
examples/urr-3-0-sl/: CMakeLists.txt  main.cc  problem.cc  problem.h
examples/watanbe1984/: CMakeLists.txt  watanbe1984.cc
src/: main.cpp  test.cc
src/base/: block_block_vector.cc  block_block_vector.h  block_block_vector.templates.h  lapack_full_matrix.cc  lapack_full_matrix.h  lapack_templates.h  mgxs.cc  mgxs.h  petsc_block_block_vector.cc  petsc_block_block_vector.h  petsc_block_block_wrapper.h  petsc_block_vector.h  petsc_block_wrapper.h  petsc_matrix_free.cc  petsc_matrix_free.h  petsc_matrix_free_wrapper.h  petsc_precondition.h  petsc_precondition_matrix.cc  petsc_precondition_matrix.h  petsc_precondition_shell.cc  petsc_precondition_shell.h  petsc_solver.cc  petsc_solver.h  petsc_vector.h  petsc_wrapper.h  precondition_block_growing_lu.cc  precondition_block_growing_lu.h  precondition_growing_lu.cc  precondition_growing_lu.h  slepc_solver.cc  slepc_solver.h  slepc_transformation_preconditioner.cc  slepc_transformation_preconditioner.h  stagnation_control.cc  stagnation_control.h
src/base/tests/: block_block_vector_test.cc  mgxs_test.cc  petsc_block_block_vector_test.cc  precondition_growing_lu_test.cc  stagnation_control_test.cc  testmatrix.h
src/functions/: attenuated.h  function_lib.h
src/mesh/: mesh.cc  mesh.h  mesh.hpp
src/mesh/tests/: assembly_test.cc  pincell_test.cc  svg_flags.h  test_mesh_quarter_pincell.cpp
src/pgd/: cache.hpp  fixed_operator.h  fixed_operator.hpp  power_operator.h  power_operator.hpp
src/pgd/sn/: eigen_gs.cc  eigen_gs.h  eigen_interface.h  eigen_updatable_interface.h  energy_mg_fiss.cc  energy_mg_fiss.h  energy_mg_full.cc  energy_mg_full.h  fission_s.cc  fission_s.h  fission_s_gs.cc  (+42 more)
src/sn/: conservation.hpp  discrete_to_moment.cc  discrete_to_moment.cpp  discrete_to_moment.h  discrete_to_moment.hpp  emission.cc  emission.h  fission.cc  fission.h  fission_problem.h  fission_source.h  fixed_source.cc  fixed_source.cpp  fixed_source.h  fixed_source.hpp  fixed_source_gs.cc  fixed_source_gs.cpp  fixed_source_gs.h  fixed_source_gs.hpp  fixed_source_problem.cc  fixed_source_problem.h  moment_to_discrete.cc  moment_to_discrete.cpp  moment_to_discrete.h  moment_to_discrete.hpp  production.cc  production.h  quadrature.cc  quadrature.cpp  quadrature.h  quadrature.hpp  quadrature_lib.cc  quadrature_lib.h  scattering.cc  scattering.cpp  scattering.h  scattering.hpp  scattering_block.cc  scattering_block.cpp  scattering_block.h  (+16 more)
src/types/: block_block_vector.hpp  matrix_type.hpp  types.h  types.hpp
(+16 files in other folders)
